# Home_Work_Django_2

./: catalog_data.json  manage.py  pyproject.toml
Home_Work_Django_2/: asgi.py  settings.py  urls.py  wsgi.py
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: fill_category.py  fill_product.py
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  contacts.html  home.html  product.html  product_confirm_delete.html  product_form.html
catalog/templates/catalog/includes/: inc_menu.html
users/: forms.py  generate_password.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/templates/users/: email_verified.html  login.html  register.html  suggest_registration.html  user_form.html  verification_failed.html  verification_link_sent.html
