[tool.poetry]
name = "home-work-django-2"
version = "0.1.0"
description = ""
authors = ["EroshVK <635753051vika@gmai.com>"]
readme = "README.md"
packages = [{include = "home_work_django_2"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
